# TSOAX

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg-configuration.json  vcpkg.json
include/: grid.h  image_reader.h  interpolator.h  junction_actor.h  junctions.h  lapjv.h  main_window.h  snake.h  snake_actor.h  snake_tip.h  viewer.h
src/: analysis_options_dialog.cc  batch_tsoax.cc  lapjv.cc  main_window.cc  multisnake.cc  parameters_dialog.cc  troax.cc  view_options_dialog.cc  viewer.cc
